--- a/server/index.html
+++ b/server/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Redux</title>
 </head>
+
 <body>
     <h1>Redux</h1>
+    <!-- App component mount point -->
+    <div id="app"></div>
     <script src="/bundle.js"></script>
 </body>
+
 </html>
