--- a/server/index.html
+++ b/server/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Redux</title>
+    <title>Redux-Only</title>
 </head>
 
 <body>
-    <h1>Redux</h1>
+    <h1>Redux-Only!</h1>
     <!-- App component mount point -->
     <div id="app"></div>
     <script src="/bundle.js"></script>
